[package]
name = "riceutils"
version = "0.1.0"
edition = "2021"

[lib]
name = 'lib'

[dependencies]
async-process = "2.2.3"
async-signal = "0.2.8"
futures-lite = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.17"
xdg = "2.5.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = { version = "4.5.8", features = ["derive"] }
